; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/arkag/extr_arkag.c_velocikey_accelerate.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/arkag/extr_arkag.c_velocikey_accelerate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@typing_speed = common dso_local global i32 0, align 4
@TYPING_SPEED_MAX_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @velocikey_accelerate() #0 {
  %1 = load i32, i32* @typing_speed, align 4
  %2 = load i32, i32* @TYPING_SPEED_MAX_VALUE, align 4
  %3 = icmp slt i32 %1, %2
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = load i32, i32* @TYPING_SPEED_MAX_VALUE, align 4
  %6 = sdiv i32 %5, 50
  %7 = load i32, i32* @typing_speed, align 4
  %8 = add nsw i32 %7, %6
  store i32 %8, i32* @typing_speed, align 4
  br label %9

9:                                                ; preds = %4, %0
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
